--- a/project_proudme/src/css/header.css
+++ b/project_proudme/src/css/header.css
@@ -14,6 +14,10 @@ nav {
     align-items: center;
 }
 
+.right-nav {
+    color: #2E6AA1;
+}
+
 #welcome {
     color: #2E6AA1;
     font-family: Roboto;
