--- a/project_proudme/src/css/login.css
+++ b/project_proudme/src/css/login.css
@@ -11,10 +11,6 @@
 
 form {
     width: 100%;
-    /* display: flex;
-    flex-direction: column; */
-    /* align-items: center;
-    justify-content: center; */
 }
 
 .loginButton {
@@ -51,4 +47,9 @@ input {
 
 .registration {
     margin-top: 4%;
+}
+
+.success-login {
+    font-size: 30px;
+    font-weight: bold;
 }
