--- a/project_proudme/src/css/home.css
+++ b/project_proudme/src/css/home.css
@@ -20,7 +20,17 @@
 }
 
 .right-icons {
-    margin-left: 75%;
+    margin-left: 10%;
     width: 7%;
-    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.left-icons {
+    margin-right: 10%;
+    width: 7%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
