--- a/project_proudme/src/css/login.css
+++ b/project_proudme/src/css/login.css
@@ -53,3 +53,14 @@ input {
     font-size: 30px;
     font-weight: bold;
 }
+
+a:link { text-decoration: none; }
+
+
+a:visited { text-decoration: none; }
+
+
+a:hover { text-decoration: none; }
+
+
+a:active { text-decoration: none; }
