--- a/project_proudme/src/css/header.css
+++ b/project_proudme/src/css/header.css
@@ -1,5 +1,5 @@
 nav {
-    height: 8%;
+    height: 10%;
     background-color: #B4E1FF;    
     display: flex;
     justify-content: space-between;
@@ -8,7 +8,7 @@ nav {
 
 .left-nav {
     margin-left: 2%;
-    width: 40%;
+    width: 60%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -33,4 +33,8 @@ nav {
 
 .nav-link {
     margin: 2%;
+}
+
+a {
+    color: #2E6AA1;
 }
