--- a/project_proudme/src/css/journal.css
+++ b/project_proudme/src/css/journal.css
@@ -3,22 +3,22 @@
 }
 
 .journal {
-    margin-top: 2%;
+    margin-top: 1%;
 }
 
 .journalWrapper {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 1%;
 }
 
 .journalCover {
-    width: 55%;
-    margin-top: 2%;
+    width: 60%;
 }
 
 .leftPageWrapper {
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: center;
     margin-top: auto;
@@ -27,5 +27,87 @@
 }
 
 .leftpage1 {
-    width: 75%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    grid-row: 2;
+    grid-column: 1;
+    margin-left: 10%;  
+}
+
+.leftpage2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    grid-row: 2;
+    grid-column: 1;
+    margin-left: 12%;  
+}
+
+.leftpage3 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    grid-row: 2;
+    grid-column: 1;
+    margin-left: 14%;  
+}
+
+.rightPageWrapper {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    margin-top: auto;
+    margin-left: 30%;
+    position: absolute;
+}
+
+.rightpage1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    grid-row: 2;
+    grid-column: 2;
+    margin-left: 4%;  
+}
+
+.rightpage2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    grid-row: 2;
+    grid-column: 2;
+    margin-left: 8%;  
+}
+
+.rightpage3 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    grid-row: 2;
+    grid-column: 2;
+    margin-left: 12%;  
+}
+
+.bookmark {
+    max-width: 100%;
+    height: 600px;
+    z-index: 999;
+    position: absolute;
+}
+
+.goal-box {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid-row: 2;
+    grid-column: 1;
+    text-align: center;
 }
