--- a/project_proudme/src/css/journal.css
+++ b/project_proudme/src/css/journal.css
@@ -33,7 +33,7 @@
     width: 90%;
     grid-row: 2;
     grid-column: 1;
-    margin-left: 4%;  
+    margin-left: 2%;  
 }
 
 .leftpage2 {
@@ -43,7 +43,7 @@
     width: 90%;
     grid-row: 2;
     grid-column: 1;
-    margin-left: 6%;  
+    margin-left: 4%;  
 }
 
 .leftpage3 {
@@ -53,7 +53,7 @@
     width: 90%;
     grid-row: 2;
     grid-column: 1;
-    margin-left: 8%;  
+    margin-left: 6%;  
 }
 
 .rightPageWrapper {
@@ -72,7 +72,8 @@
     width: 90%;
     grid-row: 2;
     grid-column: 2;
-    margin-left: 4%;  
+    margin-left: 5%;  
+    z-index: 3;
 }
 
 .rightpage2 {
@@ -82,7 +83,8 @@
     width: 90%;
     grid-row: 2;
     grid-column: 2;
-    margin-left: 8%;  
+    margin-left: 7%; 
+    z-index: 2; 
 }
 
 .rightpage3 {
@@ -92,22 +94,53 @@
     width: 90%;
     grid-row: 2;
     grid-column: 2;
-    margin-left: 12%;  
+    margin-left: 9%;  
+    z-index: 1;
 }
 
 .bookmark {
     max-width: 100%;
-    height: 700px;
+    height: 680px;
     z-index: 999;
+    margin-left: 3%;
     position: absolute;
 }
 
 .goal-box {
     position: absolute;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 15%;
+    margin-left: 10%;
+    margin-bottom: 100%;
     grid-row: 2;
     grid-column: 1;
     text-align: center;
+    z-index: 999;
+    width: 80%;
+}
+
+.middle-line {
+    position: absolute;
+    height: 676px;
+}
+
+.modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 25px;
+    padding: 10px;
+    margin-left: 27.5%;
+    margin-top: 22%;
+    background-color: white;
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-input {
+    width: 80%;
 }
