--- a/project_proudme/src/css/signup.css
+++ b/project_proudme/src/css/signup.css
@@ -3,10 +3,11 @@
     width: 50%;
     margin: auto;
     border-radius: 10px;
-    height: 55vh;
+    height: auto;
     padding: 10px;
     box-shadow: 5px 5px 5px 5px #808080;
     margin-top: 2%;
+    margin-bottom: 2%;
 }
 
 form {
