--- a/project_proudme/src/css/journal.css
+++ b/project_proudme/src/css/journal.css
@@ -112,7 +112,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 20%;
+    margin-top: 60%;
     margin-left: 10%;
     margin-bottom: 100%;
     grid-row: 2;
@@ -263,4 +263,17 @@
 #downIcon:hover {
     transform: scale(1.5);
     color:red;
+}
+
+.recommendation-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: left;
+    padding: 10px;
+    background-color: white;
+    box-shadow: 1px 1px 1px 1px #808080; 
+    border-radius: 5px;
+    width: 90%;
+    margin-top: 2%;
 }
